fix: stuck when adjusting grid item size

--- a/joeselnfrontend/src/app/modules/labbook/components/draw-board/grid/grid.component.scss
+++ b/joeselnfrontend/src/app/modules/labbook/components/draw-board/grid/grid.component.scss
@@ -25,6 +25,19 @@
       gridster-item {
         border-radius: 15px;
       }
+
+      gridster-item .element-container {
+        pointer-events: initial;
+        height: inherit;
+      }
+
+      .gridster-item-moving .element-container {
+        pointer-events: none;
+      }
+
+      .gridster-item-resizing .element-container {
+        pointer-events: none;
+      }
     }
   }
 }
